using System;
using System.Collections.Generic;
using System.Text;

namespace OOP_2_Finale___EFFControleCenter.Enums
{
    public enum TerrainType
    {
        Space,
        Urban,
        Forest,
        Desert,
        Ocean,
        Atmosphere
    }
}
