using System;
using System.Collections.Generic;
using System.Text;

namespace OOP_2_Finale___EFFControleCenter.Interfaces
{
    public interface IFlyable
    {
        void Fly();
    }
}
